crates/analyzer/tests/snapshots/errors__call_balance_of_without_parameter.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `balance_of` expects 1 argument, but 0 were provided
   ┌─ src/evm.fe:52:8
   │
52 │ pub fn balance_of(addr: address) -> u256:
   │        ^^^^^^^^^^ expects 1 argument
   │
   ┌─ [snippet]:3:23
   │
 3 │   std::evm::balance_of()
   │                       -- supplied 0 arguments


